<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="417dp"
            android:layout_height="557dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/LogoTemperoSaisie"
                android:layout_width="106dp"
                android:layout_height="174dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/logotemperocalor" />

            <TextView
                android:id="@+id/titre_saisie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titre_saisie"
                android:translationX="160dp" />

            <CalendarView
                android:id="@+id/calendrierSaisie"
                android:layout_width="match_parent"
                android:layout_height="60dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:translationY="20dp">

                <RadioButton
                    android:id="@+id/radioButton_heure_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heure_6" />

                <RadioButton
                    android:id="@+id/radioButton_heure_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heure_12"
                    android:translationX="75dp" />

                <RadioButton
                    android:id="@+id/radioButton_heure_18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heure_18"
                    android:translationX="140dp" />

                <RadioButton
                    android:id="@+id/radioButton_heure_00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heure_00"
                    android:translationX="180dp" />
            </RadioGroup>

            <Spinner
                android:id="@+id/nomLacSpinner"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:translationY="50dp" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Exemple"
                android:inputType="textPersonName"
                android:text="Exemple"
                android:translationY="70dp"
                tools:text="Exemple" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="244dp"
                android:translationY="100dp" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonEnregistrer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnenreg" />

        <Button
            android:id="@+id/buttonRetour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnretour" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>